@@ -2,8 +2,8 @@ package MyWork.Tools;
 
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
-import org.apache.commons.codec.binary.Base64;
-//import javax.xml.bind.DatatypeConverter;
+
+import java.util.Base64;
 
 import static MyWork.Config.*;
 
@@ -39,8 +39,7 @@ public class CryptDecrypt {
             ex.printStackTrace();
             return "Error";
         }
-//        return DatatypeConverter.printBase64Binary(encoding);
-        return new String(Base64.encodeBase64(encoding));
+        return new String(Base64.getEncoder().encode(encoding));
     }
 
     public static String getEncrypt(String pass, String toEncryptString) {
@@ -48,8 +47,7 @@ public class CryptDecrypt {
         byte[] message;
         try {
             Cipher cipher = Cipher.getInstance("Blowfish/CBC/PKCS5Padding");
-//            byte[] cryptoText = DatatypeConverter.parseBase64Binary(toEncryptString);
-            byte[] cryptoText = Base64.decodeBase64(toEncryptString.getBytes());
+            byte[] cryptoText = Base64.getDecoder().decode(toEncryptString);
             cipher.init(Cipher.DECRYPT_MODE, secKey, new javax.crypto.spec.IvParameterSpec(IV.getBytes()));
             message = cipher.doFinal(cryptoText);
         } catch (Exception ex) {
